[project]
name = "pykakasi"
requires-python = ">=3.8"
description = "Kana kanji simple inversion library"
keywords = ["kakasi", "NLP"]
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Hiroshi Miura", email = "miurahr@linux.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["jaconv", "deprecated"]
dynamic = ["version", "readme"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pykakasi"]

[tool.setuptools.dynamic]
readme = {file = ["README.rst"]}

[project.scripts]
kakasi = "pykakasi.cli:cli_main"

[project.optional-dependencies]
test = [
    "pytest>7",
    "pytest-benchmark",
    "pytest-cov",
    "coverage[toml]>=5.2",
    "py-cpuinfo"
    ]
docs = [
    "sphinx>=1.8",
    "sphinx-intl",
    "sphinx-py3doc-enhanced-theme",
    "sphinx_rtd_theme"
    ]
check = [
    "mypy>=1.0.0",
    "mypy_extensions>=1.0.0",
    "docutils",
    "check-manifest",
    "flake8",
    "flake8-black",
    "flake8-deprecated",
    "readme-renderer",
    "pygments",
    "isort",
    "twine"
    ]

[project.urls]
Source = "https://github.com/miurahr/pykakasi"
Documentation = "https://pykakasi.readthedocs.io/"
"Bug Tracker" = "https://github.com/miurahr/pykakasi/issues"
Changelog = "https://pykakasi.readthedocs.io/en/latest/changes.html"

[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.5.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = ["src"]
python_files = "test_*.py"
norecursedirs = [".git", "_build", "tmp*", ".eggs"]
markers = ["thread: test with threading"]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
parallel = true
source = ["pykakasi", "tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["if __name__ == .__main__.:", "pragma: no-cover", "@abstract", "def __repr__"]

[tool.black]
line-length = 125
target-version = ['py313']


[tool.isort]
known_first_party = ["pykakasi"]
known_third_party = ["docutils", "flake8", "pyannotate_runtime", "pytest", "pytz", "setuptools", "sphinx", "yaml"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 125

[tool.mypy]
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
show_column_numbers = true
ignore_missing_imports = true

[tool.tox]
env_list = ["mypy", "clean", "check", "py311", "py312", "py313", "py314", "pypy3", "docs"]

[tool.tox.env_run_base]
extras = ["test"]
pass_env = ["COVERALLS_*", "PYTEST_ADDOPTS"]
commands = [["pytest"]]

[tool.tox.env.check]
base_python = ["python3.13"]
extras = ["check"]
commands = [
    ["check-manifest", "{toxinidir}"],
    ["flake8", "src", "tests", "setup.py"],
    ["isort", "--check-only", "--diff", "src", "tests", "setup.py"]
]

[tool.tox.env.clean]
deps = ["coverage[toml]"]
commands = [["coverage", "erase"]]

[tool.tox.env.mypy]
extras = ["check"]
commands = [["mypy", "src"]]

[tool.tox.env.coveralls]
deps = ["coveralls"]
skip_install = true
commands = [["coveralls"]]

[tool.tox.env.docs]
base_python = ["python3.13"]
extras = ["docs"]
commands = [
    ["sphinx-build", "{posargs:-E}", "-b", "html", "docs", "build/docs"],
    ["sphinx-build", "-b", "linkcheck", "docs", "build/docs"]
]