[bdist_wheel]
universal=0


[flake8]
ignore = E701
max-line-length = 160
exclude = .git,__pycache__,docs/conf.py,build,dist,tmp,venv


[metadata]
name = pykakasi
description = Python implementation of kakasi - kana kanji simple inversion library
copyright = Copyright (C) 2010-2020 Hiroshi Miura
license = GPLv3
author = Hiroshi Miura
author_email = miurahr@linux.com
url = https://github.com/miurahr/pykakasi
long_description = file: README.rst, CHANGELOG.rst
long_description_content_type = text/x-rst
classifiers =
      Development Status :: 5 - Production/Stable
      Environment :: Console
      License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find:
provides = pykakasi
setup_requires =
    klepto
    setuptools>=42
    setuptools-scm[toml]>=3.5.0
    wheel
install_requires =
    klepto
    importlib_metadata;python_version<"3.8"
scripts =
    bin/kakasi

[options.packages.find]
where = src

[options.package_data]
* = src/data/*.utf8

[options.extras_require]
test =
    pytest
    pytest-benchmark
    pytest-pep8
    pytest-cov
    pytest-profiling
    coverage[toml]>=5.2
    py-cpuinfo
docs =
    sphinx>=1.8
    sphinx-intl
    sphinx-py3doc-enhanced-theme
    sphinx_rtd_theme
check =
    mypy==0.770
    mypy_extensions==0.4.3
    docutils
    check-manifest
    flake8
    flake8-black
    readme-renderer
    pygments
    isort
    twine
